assets/css/theme.css
/* ... */
#layout-subnav .nav li.active a {
  background: transparent;
  color: #fff;
}

#layout-subnav h1,
#layout-subnav h2,
#layout-subnav h3,
#layout-subnav h4,
#layout-subnav h5 {
  margin: 0;
  padding: 0;
  line-height: 60px;
}

.static-content-page {
  margin: 30px auto;
  background: #fff;
  padding: 50px 40px;
  max-width: 900px;
}

.static-content-page p {
  font-size: 1.6rem;
  line-height: 1.6;
  margin-bottom: 20px;
}

.static-content-page .title-area {
  margin-top: -10px;
}

.static-content-page .img-theme {
  border: 1px solid #dcdcda;
  margin: 0 auto;
  margin-bottom: 30px;
}

.static-content-extra {
  margin: -30px auto 30px auto;
  background: #fff;
  padding: 30px 100px;
  max-width: 800px;
  background: #eeeeee;
  position: relative;
  color: rgba(0, 0, 0, 0.7);
}

.static-content-extra:after,
.static-content-extra:before {
  position: absolute;
  font-size: 100px;
  color: #999;
  line-height: 1;
}

.static-content-extra:before {
  content: '“';
  top: 0;
  left: 40px;
}

.static-content-extra:after {
  content: '”';
  bottom: 0;
  right: 40px;
}

.static-content-extra p {
  font-style: italic;
  font-size: 1.8rem;
}

.callout {
  margin-bottom: 20px;
  padding: 20px;
  border-left: 3px solid #eeeeee;
}

.callout h4 {
  margin-top: 0;
  margin-bottom: 5px;
}

.callout p:last-child {
  margin-bottom: 0;
}

.callout-danger {
  background-color: #fdf7f7;
  border-color: #ebccd1;
}

.callout-danger h4 {
  color: #a94442;
}

.callout-warning {
  background-color: #faf8f0;
  border-color: #faebcc;
}

.callout-warning h4 {
  color: #8a6d3b;
}

.callout-info {
  background-color: #f4f8fa;
  border-color: #bce8f1;
}

.callout-info h4 {
  color: #31708f;
}

.callout-success {
  background-color: #f9fdf7;
  border-color: #d6e9c6;
}

.callout-success h4 {
  color: #3c763d;
}

#footer {
  display: flex;
  justify-content: center;
}

.copyrightName {
  margin: 0 .5rem 1rem 0;
}

.address-line, .contact-line {
  display: block;
}

.flex-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.column {
  flex: 1;
  padding: 0 10px;
  max-width: 400px;
}

.column h3 {
  margin: 0 0 0 10px 0;
}

@media (max-width: 768px) {
  .flex-container {
      flex-direction: column;
  }
}

.navbar-nav a:hover, .navbar-nav a:focus  {
  background-color: #dedcde !important;
  border-radius: 10px !important;
}

.navbar-toggle {
  background: none;
  border: none;
  margin-top: 8px;
  position: relative;
}

.navbar-toggle .icon-bar {
  display: block;
  width: 22px;
  height: 2px;
  background-color: #333;
  margin: 4px 0;
  transition: all 0.3s !important;
}

.navbar-toggle.collapsed .icon-bar.middle-bar {
  opacity: 0;
}

.navbar-toggle.collapsed .icon-bar.top-bar {
  transform: translateY(6px) rotate(45deg) !important;
}

.navbar-toggle.collapsed .icon-bar.bottom-bar {
  transform: translateY(-6px) rotate(-45deg);
}

/* Collapse transition */
.navbar-collapse {
  transition: max-height 0.3s;
  overflow: hidden;
}

